# fileop

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md  common.c  common.h  main.c
src/read/: file_read.c  file_read.h
src/tcp_client/: client.c
src/tcp_server/: server.c
src/write/: file_write.c  file_write.h
